Apply google java code style